# SodhiCableMES

./: .dockerignore  .flake8  .gitignore  CLAUDE.md  DEMO_GUIDE.md  Dockerfile  PLAN.md  QUICKSTART.md  README.md  USER_GUIDE.md  app.py  config.py  db.py  docker-compose.yml  init_db.py  migrate.py  nginx.conf  pyproject.toml  query_loader.py  requirements.txt  start.sh  validate.py
blueprints/: __init__.py  api_about.py  api_ai.py  api_bottleneck.py  api_demo.py  api_des.py  api_documents.py  api_equipment.py  api_erp.py  api_executive.py  api_extras.py  api_inventory.py  api_labor.py  api_mrp.py  api_oee.py  api_performance.py  api_process.py  api_quality.py  api_sales.py  api_scada.py  api_scheduling.py  api_suppliers.py  api_system.py  api_traceability.py  api_workorders.py  dashboard.py
database/: schema.sql  seed_data.sql  seed_data_generated.sql  seed_generator.py  views.sql
docs/: PLAN.md
engines/: __init__.py  bottleneck.py  demo_scenarios.py  des_engine.py  dispatch.py  erp_sim.py  forecast.py  labor.py  maintenance_calc.py  mrp_engine.py  oee.py  opcua_sim.py  pid_control.py  scheduling.py  simulation.py  solver.py  spc.py  supply_risk.py
paper/: Eacuello_MES_Design_Prototype.aux  Eacuello_MES_Design_Prototype.tex  LITERATURE_REVIEW.md  additional_sections.tex
queries/: 01_wo_management.sql  02_scheduling.sql  03_inventory.sql  04_quality.sql  05_traceability.sql  06_document_control.sql  07_equipment.sql  08_data_collection.sql  09_process_mgmt.sql  10_labor.sql  11_performance.sql
static/: openapi.yaml
templates/: about.html  ai.html  base.html  (+33 more)
(+24 files in other folders)
